--- a/LabI/HelloWorld/app/src/main/res/values/strings.xml
+++ b/LabI/HelloWorld/app/src/main/res/values/strings.xml
@@ -1,3 +1,3 @@
 <resources>
-    <string name="app_name">HelloWorld</string>
+    <string name="app_name">TCP/UDP Packet Masher 2000</string>
 </resources>
