--- a/Report/src/task02/task2.tex
+++ b/Report/src/task02/task2.tex
@@ -1,3 +1,7 @@
 \section{Packet Transmission via UDP}
+As has been explained in the TCP part of the programs' documentation, a strategy pattern has been implemented to very easily switch between communication protocol. The following descriptions only focus on the differences the UDP protocol entails.
+
 \input{task02/task2subtask1}
+
+
 \input{task02/task2subtask2}
