--- a/Report/src/main.tex
+++ b/Report/src/main.tex
@@ -56,6 +56,10 @@
 \end{titlepage}
 
 \tableofcontents
+
+\newpage
+\addcontentsline{toc}{section}{\listfigurename}
+\listoffigures
 \newpage
 
 \definecolor{pblue}{rgb}{0.13,0.13,1}
@@ -87,7 +91,6 @@
 \newpage
 \input{task03/task3}
 \newpage
-\section{Lists of Figures and Tables}
 
 
 \end{document}
