finishing up report

--- a/Report/src/main.tex
+++ b/Report/src/main.tex
@@ -46,6 +46,9 @@
 		\vspace{5mm}
 		
 		Christos Ioannidis\\
+		\vspace{5mm}
+		\today
+		
 		\vspace{10mm}
 		
 		\small Betreuer: Prof. Dr. Udo Krieger\\
