--- a/Report/src/task03/task3subtask2.tex
+++ b/Report/src/task03/task3subtask2.tex
@@ -1,4 +1,6 @@
 \subsection{Evaluation of an Android Device in a WiFi Network}
+The communication package bundling the network specific classes was exported with the help of eclipse as a \textit{.jar} file. This file was added as a library to the Android project, ensuring a seamless reuse of the already written parts. 
+
 \subsubsection{Android App as client}
 \begin{figure}[H]
 	\centering
